# musicai

./: .editorconfig  .env  .env.example  CENTRALIZED_CONFIGURATION_FINAL.md  CHAT_INTEGRATION_ANALYSIS.md  CHAT_INTEGRATION_IMPLEMENTATION.md  ENVIRONMENT_CONFIGURATION.md  Makefile  NEO4J_FIX.md  OLLAMA_CONNECTION_FIX.md  PROJECT_STATUS.md  TESTING_STRATEGY.md  docker-compose.yml  monitor-logs.sh  test-llm-interactive.sh  test-musicai-stack.sh
preprocessing/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
preprocessing/docs/: arquitectura_musica_ai.odt  arquitectura_musica_ai.txt
preprocessing/protos/: preprocessing.proto
preprocessing/reports/: coverage.json  coverage.xml  pytest-report.html
preprocessing/reports/allure-results/: 0204d62d-2858-49b9-8c24-f226694de8c4-container.json  08bac02b-fd97-4619-8ee3-efeefba44bbd-container.json  0b48fee4-7ee1-4326-8b80-47fed78e31c3-container.json  0bb7b7de-473c-4844-b7ce-cf834002f330-attachment.json  0c0ab7a8-ba39-46c1-97c8-3d8e5a4e3949-result.json  0d1c7717-c59e-4668-8420-9d969e9b01f1-attachment.json  11feceb1-f5b2-46a0-9ba0-20466e8b7cb7-result.json  12877a57-6d70-44fc-84be-6f424f6417eb-container.json  12fb86f5-072a-4465-94f4-224c744f187a-attachment.json  136d91e2-d9ff-4ab0-88c7-d84cdc3feb6c-attachment.json  1828f20b-5e30-47a6-90bb-232e97480bef-attachment.json  199b4bc0-361a-4895-9bf0-e17bb2b730cd-result.json  1db7e207-36e7-4e90-965c-038fefd7fb39-attachment.json  (+126 more)
preprocessing/src/: __init__.py  config.py  main.py
preprocessing/tests/: conftest.py  test_api.py  test_audio.py  test_messaging.py  test_tokenizer.py
reasoning/: .env  (+8 more)
(+233 files in other folders)
